tests/expectations/compiler/scalar/div_fail.out
Error [ETYC0372117]: Expected a field or integer but type `scalar` was found.
    --> compiler-test:2:12
     |
   2 |     return a / b; // division not supported for scalar types.
     |            ^
Error [ETYC0372117]: Expected a field or integer but type `scalar` was found.
    --> compiler-test:2:16
     |
   2 |     return a / b; // division not supported for scalar types.
     |                ^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:4:9
     |
   4 | program test.aleo {}
     |         ^^^^^^^^^
